<resources>

    <string name="app_name">Contatos ON</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_out">Sair</string>
    <string name="action_register">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Esse email é inválido</string>
    <string name="error_invalid_password">Essa senha é muito curta</string>
    <string name="error_incorrect_password">Essa senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de contatos são necessárias para fornecer e-mail
        conclusões."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
</resources>
